icons - make package linux - simple bug on wordwrap

--- a/electron/css/index.css
+++ b/electron/css/index.css
@@ -74,6 +74,7 @@ body {
 }
 .eachTitleContainer {
     padding: 5px;
+    word-wrap: break-word;
 }
 
 /* 
